<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.wibej.informacionpersonal.ConfirmationActivity">
        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_2_titulo"
            android:textSize="30dp"
            android:textAlignment="center"
            android:paddingBottom="20dp"
            />
        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_name"
            android:layout_below="@+id/tvTitulo"/>
        <LinearLayout
            android:id="@+id/wrapperFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/tvName">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_fecha_nacimiento"
                android:paddingRight="10dp"/>
            <TextView
                android:id="@+id/tvInfoFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_fecha_nacimiento"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/wrapperPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/wrapperFechaNacimiento"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_telefono"
                android:paddingRight="10dp"/>
            <TextView
                android:id="@+id/tvInfoTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_telefono"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/wrapperEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/wrapperPhone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_email"
                android:paddingRight="10dp"/>
            <TextView
                android:id="@+id/tvInfoEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_email"/>

        </LinearLayout>
        <TextView
                android:id="@+id/lblDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_descripcion"
                android:paddingRight="10dp"
                android:layout_below="@+id/wrapperEmail"
            />
        <TextView
                android:id="@+id/tvInfoDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_descripcion"
                android:layout_below="@id/lblDescripcion"
                />

        <Button
            android:id="@+id/btnEditarDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvInfoDescripcion"
            android:text="@string/button_edit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
</RelativeLayout>
