<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wibej.informacionpersonal.MainActivity">
    <RelativeLayout
        android:id="@+id/personalInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <EditText
            android:id="@+id/etNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/nombre_completo" />
        <RelativeLayout
            android:id="@+id/llFecha"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_below="@id/etNombreCompleto">
            <TextView
                android:id="@+id/lblFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_nacimiento"
                android:textSize="15dp"/>
            <DatePicker
                android:id="@+id/dpFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblFechaNacimiento"
                android:minDate="01/01/1950"
                android:datePickerMode="spinner"
                android:spinnersShown="true"
                android:calendarViewShown="false"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llFecha"
            android:text="@string/telefono"
            android:inputType="phone"
            />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etTelefono"
            android:text="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/etEmail"
            android:text="@string/descripcion"
            android:inputType="textMultiLine"
            android:gravity="top"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_next"
        android:onClick="loadConfirmation"
        />

</RelativeLayout>
